<resources>
    <string name="app_name">DealDaddy</string>
    <string name="shortText">\"Always dress like you\'re going to see your worst enemy.\"  \n <b><i>Kimora Lee</i></b></string>

    <string name="itemone"><b>WOGON</b> Men Navy Blue Printed Round Neck T-shirt \n\n\u20B9 699 (50% OFF) \nAdditional tax may apply; charged at checkout</string>
    <string name="itemonenext"><b>Best Price : \u20B9 686 </b>\nApplicable on : Order above Rs. 1799\nCoupon Code : SAVE5\nMax Discount : 51% of MRP (Your total svaing : Rs. 713, excluding tax \n\n\n<b>Flat 200 cashback on Airtel Payments Bank\n</b>Min spend Rs 2,000; for first time transaction. TCA\n\n\n<b>10% SuperCash on MobiKwik</b>\nMax SuperCash Rs 250. TCA\n\n\n<b>EMI option available</b>\nEMI starting from Rs.33/month</string>
    <string name="itemonenext1"><b>Easy 30 days returns and 30 days exchanges</b>\nChoose to return within 30 days or exchange within 30 days.</string>
    <string name="itemonenext2">SELECT SIZE</string>
    <string name="itemonenext3"><b>Product Details</b>\nBlack and grey checked casual shirt, has a spread collar, a full button placket, long sleeves with roll-up tabs, a patch pocket, a curved hem \n\n\n<b>Size and Fit</b>\nThe model (height 6\' and shoulders 18\") is wearing a size 40\n\n\n<b>Material and Care</b>\nCotton\nMachine-wash</string>
    <string name="itemonenext4">DELIVERY AND SERVICES FOR</string>
    <string name="itemonenext5">Sport this trendsetting WROGN tee when you are ready to take your style to the next level. A quick drink with the gang is as easy as putting this navy blue piece in league with some slim black jeans and a sturdy overshirt.</string>
    <string name="itemonenext6"><b>MORE INFORMATION</b>\nProduct Code : 208921\n\nSold by : <b>Fashion Tech</b>\nTax : Applicable tax on the basis of exact location and discount will be charged at the time of checkout \n\n<b>Manufacturer Detail</b>\nTommy Hilfiger Arvind Fashion Pvt. Ltd, No. 4, Bruton 1st Cross Road Banglore-560025<b>\n\nCountry of Origin\n</b>CHINA</string>
    <string name="lastString">\"Clothes mean nothing until someone lives in them.\" \n  <b>Marc Jacobs</b></string>
    <string name="title_activity_order_confim">OrderConfimActivity</string>
    <string name="orderSummery">Total MRP\n\nBag discount\n\nEstimate Tex\n\nCoupon Discount\n\nDelivery Charges</string>
    <string name="priceString">  \u20B9 11,097\n\n-\u20B9 11,097\n\n \u20B9 543\n\n Apply Coupon\n\n FREE</string>
    <string name="itemAddress"><b>Sheetal Kumar</b> (Default)\n\nFlat Number 9, Lehna Singh Market, Malka Gaj New Delhi, North Delhi - 110007, Delhi\n\nMobile : <b>9540217306</b></string>
    <string name="itemonefour">Total Mr</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <b>Register</b></string>
    <string name="dealdaddy">Deal<b>Daddy</b></string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign in</b></string>
    <string name="dummy_short_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="upcoming_product_details_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n\nDisplay: Analogue \n Movement: Quartz Power \n source: Battery \n Dial style: Solid round stainless steel dial \n Features: Reset Time Strap style: Black regular, synthetic strap with a tang closure Water resistance: 30 m \n Warranty: 2 years Warranty provided by brand/manufacturer \n\n Tax: Applicable tax on the basis of exact location and discount will be charged at the time of checkout \n 100% Original Products \n Free Delivery on order above Rs. 1199 Cash on delivery might be available \n Easy 30 days returns and exchanges Try and Buy might be available \n\n Product Code: 8124431 \n Sold by: View Supplier Information</string>


    <string-array name="sizes_list">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
    <string-array name="qty_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
