<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".Activity.AboutItemActivity">

    <TextView
        android:id="@+id/dealDaddyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="About"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/navicon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/navicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bag_background"
        android:padding="10dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:src="@drawable/ic_shopping_bag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealDaddyText"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="395dp"
                android:scaleType="centerCrop"
                android:src="@drawable/menimg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/ovo"
                    android:padding="10dp"
                    android:text="@string/itemone"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#f1f1f1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/ovo"
                    android:padding="10dp"
                    android:text="@string/itemonenext"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/ovo"
                    android:padding="10dp"
                    android:text="@string/itemonenext1"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="16dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/ovo"
                    android:padding="10dp"
                    android:text="@string/itemonenext2"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/s"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/ovo"

                    android:gravity="center"
                    android:padding="5dp"
                    android:text="S"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/m"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/ovo"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="M"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/s"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/l"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/ovo"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="L"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/m"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/xl"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/ovo"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="XL"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/l"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/randomtext"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/ovo"
                    android:text="Buy a size larger : This item's size runs small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/s" />

                <Button
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/ovo"
                    android:text="Wishlist"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/randomtext"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="@font/ovo"
                    android:text="Add To Bag"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/randomtext"
                    app:layout_constraintVertical_bias="0.0" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>